--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,34 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.socials-container span::before{
+  content: attr(data-social);
+  position: absolute;
+  background-color: var(--accent-color);
+  color: white;
+  text-decoration: none;
+  padding: 0.5em 1em;
+  border-radius: 100px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.05);
+  transform: translateY(-35px) rotate(20deg);
+  opacity: 0;
+}
+.socials-container span::after{
+  content: '';
+  position: absolute;
+  left: 13px;
+  height: 0;
+  width: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 10px solid var(--accent-color);
   text-align: center;
+  transform: translateY(0) rotate(25deg);
+  opacity: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.socials-container span::before{
+  transform: translateY(-43px) rotate(0);
+  opacity: 1;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.socials-container span::after{
+  transform: translateY(-52px) rotate(0);
+  opacity: 1;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
